# backend

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/: api.py  cli.py
backend/auth/: authentication.py  oauth2.py
backend/db/: database.py  db_comment.py  db_post.py  db_user.py
backend/routers/: comment.py  post.py  user.py
