[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["laurens <voogdlaurens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.4"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
