[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["laurens <voogdlaurens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.4"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
gino = "^1.0.1"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.27.1"

[tool.poetry.scripts]
backend = 'backend.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
