[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["laurens <voogdlaurens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.4"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
psycopg2 = "^2.9.3"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.32"
pysqlite3 = "^0.4.7"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.27.1"

[tool.poetry.scripts]
backend = 'backend.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
